--- a/site/package.json
+++ b/site/package.json
@@ -21,8 +21,10 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@babel/core": "^7.24.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "ant-design-vue": "^3.2.15",
     "iconify-icon": "^2.1.0",
-    "lanvenUi": "workspace:*",
-    "vite-plugin-md": "^0.21.5"
+    "lanvenUi": "1.4.1",
+    "vite-plugin-md": "^0.21.5",
+    "vue-types": "^5.1.1"
   }
 }
