--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,17 +3,16 @@
   "version": "1.0.1",
   "description": "",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "vite build"
   },
   "files": [
-    "es",
-    "lib"
+    "es"
   ],
   "keywords": [
-    "lanvenUi",
-    "web业务组件库"
+    "lanvenUi"
   ],
   "author": "陈佳俊",
   "license": "",
@@ -21,6 +20,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@lanvenUi/utils": "workspace:^",
     "@types/node": "^20.12.11",
+    "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/compiler-dom": "3.2.47",
     "@vue/compiler-sfc": "3.2.47",
@@ -33,15 +33,13 @@
     "dayjs": "^1.11.10",
     "globby": "^14.0.1",
     "less": "^4.1.3",
-    "lodash-es": "^4.17.21",
     "resize-observer-polyfill": "^1.5.1",
     "rollup-plugin-external-globals": "^0.10.0",
     "style-resources-loader": "^1.5.0",
-    "typescript": "^4.6.3",
+    "typescript": "^5.5.2",
+    "unplugin-vue-define-options": "^1.4.5",
     "vite": "5.2.10",
-    "vite-plugin-dts": "1.4.1",
-    "vue": "^3.2.47",
-    "vue-types": "^5.1.1"
+    "vue": "^3.2.47"
   },
   "typings": "lib/index.d.ts",
   "devDependencies": {
@@ -49,7 +47,10 @@
     "@types/lodash-es": "^4.17.12",
     "@types/sortablejs": "^1.15.8",
     "@vueuse/core": "^10.9.0",
+    "lodash-es": "^4.17.21",
     "sortablejs": "^1.15.2",
-    "vite-plugin-svg-icons": "^2.0.1"
+    "vite-plugin-dts": "3.9.1",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vue-types": "^5.1.2"
   }
 }
