--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -14,7 +14,11 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^5.0.5",
     "dayjs": "^1.11.10",
-    "socket.io-client": "^4.6.0"
+    "socket.io-client": "^4.6.0",
+    "vite": "5.2.10",
+    "vite-plugin-dts": "3.9.1",
+    "vue": "^3.2.47"
   }
 }
