--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: /site/docs/.vitepress/dist
+          path: ./site/docs/.vitepress/dist
           
   # 部署工作
   deploy:
