--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -17,7 +17,7 @@
     "types": ["vite/client"],
     "rootDirs": ["./", "./packages/components"],
     "declaration": true,
-    // "declarationDir": "lanvenUi",
+    // "declarationDir": "lanven-ui",
     "paths": {
       "@/*": ["./*"],
       "#/*": ["./types/*"],
