--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lanvenUi/utils",
+  "name": "@lanven-ui/utils",
   "version": "1.0.0",
   "main": "./index.ts",
   "module": "./index.ts",
