--- a/site/package.json
+++ b/site/package.json
@@ -23,7 +23,7 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "ant-design-vue": "^3.2.15",
     "iconify-icon": "^2.1.0",
-    "lanvenUi": "1.4.1",
+    "lanven-ui": "workspace:0.0.4",
     "vite-plugin-md": "^0.21.5",
     "vue-types": "^5.1.1"
   }
