--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -15,6 +15,7 @@
     "esModuleInterop": false,
     "lib": ["esnext", "dom"],
     "types": ["vite/client"],
+    "allowSyntheticDefaultImports": true,
     "rootDirs": ["./", "./packages/components"],
     "declaration": true,
     // "declarationDir": "lanven-ui",
